// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox 基础 1`] = `
<div>
  <div
    class="xrk-if xrk-ac xrk-checkbox"
    data-testid="xrk-checkbox"
  >
    <input
      class="xrk-checkbox-hide"
      data-testid="check"
      data-type="boolean"
      readonly=""
      value="0"
    />
    <i
      class="xrk-icon xrk-i-radio"
    />
    商品链接
  </div>
</div>
`;

exports[`Checkbox 基础 按钮类型 1`] = `
<div>
  <div
    class="xrk-if xrk-ac"
    data-testid="xrk-checkbox"
  >
    <input
      class="xrk-checkbox-hide"
      data-testid="check"
      data-type="boolean"
      readonly=""
      value="0"
    />
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-default"
      type="button"
    >
      商品链接
    </button>
  </div>
</div>
`;

exports[`Checkbox 基础 按钮类型 2`] = `
<div>
  <div
    class="xrk-if xrk-ac"
    data-testid="xrk-checkbox"
  >
    <input
      class="xrk-checkbox-hide"
      data-testid="check"
      data-type="boolean"
      readonly=""
      value="1"
    />
    <button
      class="xrk-btn xrk-if xrk-ac xrk-jc xrk-btn-middle xrk-btn-primary"
      type="button"
    >
      商品链接
    </button>
  </div>
</div>
`;

exports[`Checkbox 选中 1`] = `
<div>
  <div
    class="xrk-if xrk-ac xrk-checkbox-active xrk-checkbox"
    data-testid="xrk-checkbox"
  >
    <input
      class="xrk-checkbox-hide"
      data-testid="check"
      data-type="boolean"
      readonly=""
      value="1"
    />
    <i
      class="xrk-icon xrk-i-fill-select"
    />
    商品链接
  </div>
</div>
`;
